# fast-matmul-search

./: .gitignore  README.md  pyproject.toml
batch_results/: experiment_log.json
batch_results/2_2_2_rank7/: solution_0.npz  solution_1.npz  solution_10.npz  solution_100.npz  solution_101.npz  solution_102.npz  solution_103.npz  solution_104.npz  solution_105.npz  solution_106.npz  solution_107.npz  solution_108.npz  solution_109.npz  solution_11.npz  solution_110.npz  solution_111.npz  solution_112.npz  solution_113.npz  solution_114.npz  solution_115.npz  solution_116.npz  solution_117.npz  solution_118.npz  solution_119.npz  solution_12.npz  solution_120.npz  solution_121.npz  solution_122.npz  solution_123.npz  solution_124.npz  solution_125.npz  solution_126.npz  solution_127.npz  solution_128.npz  solution_129.npz  solution_13.npz  solution_130.npz  solution_14.npz  solution_15.npz  solution_16.npz  (+91 more)
batch_results/2_2_3_rank11/: solution_0.npz  (+78 more)
notebooks/: 01_understanding.ipynb  02_reproduce_strassen.ipynb  03_analyze_results.ipynb
results/: summary.json
scripts/: analyze_batch.py  full_run.sh  quick_test.sh  strassen_baseline.py  submit_diagnostic.sbatch  submit_full_run.sbatch  submit_quick_test.sbatch  verify_improvements.py
src/: __init__.py  advanced_search.py  continuous_search.py  diagnostic.py  finite_field_search.py  fixed_search.py  hardcode_known.py  numerical_stability.py  omega_analysis.py  pipeline.py  run_experiments.py  run_experiments_v3.py  tensor_utils.py  validation.py
tests/: test_search.py  test_tensor_utils.py  test_verification.py
(+284 files in other folders)
